// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/BaseLayout should render 1`] = `
<SideEffect(DocumentTitle)
  title="BaseLayout Test - Author"
>
  <App>
    <BaseLayout__Wrapper>
      <Connect(UnconnectedHeader) />
      <BaseLayout__Main>
        Children
      </BaseLayout__Main>
    </BaseLayout__Wrapper>
  </App>
</SideEffect(DocumentTitle)>
`;

exports[`components/BaseLayout should render a Nav 1`] = `
<SideEffect(DocumentTitle)
  title="BaseLayout Test - Author"
>
  <App>
    <BaseLayout__Wrapper>
      <Connect(UnconnectedHeader)
        questionnaire={
          Object {
            "title": "Questionnaire",
          }
        }
      />
      <BaseLayout__Main>
        Children
      </BaseLayout__Main>
    </BaseLayout__Wrapper>
  </App>
</SideEffect(DocumentTitle)>
`;

exports[`components/BaseLayout should render a title 1`] = `
<SideEffect(DocumentTitle)
  title="BaseLayout Test - Author"
>
  <App>
    <BaseLayout__Wrapper>
      <Connect(UnconnectedHeader) />
      <BaseLayout__Main>
        <ScrollPane>
          <BaseLayout__Title>
            Title
          </BaseLayout__Title>
          Children
        </ScrollPane>
      </BaseLayout__Main>
    </BaseLayout__Wrapper>
  </App>
</SideEffect(DocumentTitle)>
`;
